--- a/index.mdx
+++ b/index.mdx
@@ -15,13 +15,13 @@ export { future as theme } from "mdx-deck/themes";
 
 ---
 
-![edge](./img/edge.png)![chromium](./img/chromium.png)
+![edge](https://raw.githubusercontent.com/TianyuanC/knowledge-652-5/master/img/edge.png)![chromium](https://raw.githubusercontent.com/TianyuanC/knowledge-652-5/master/img/chromium.png)
 
 [New Edge](https://blogs.windows.com/windowsexperience/2019/04/08/microsoft-edge-preview-builds-the-next-step-in-our-oss-journey/)
 
 ---
 
-![wordcloud](./img/wordcloud.png)
+![wordcloud](https://raw.githubusercontent.com/TianyuanC/knowledge-652-5/master/img/wordcloud.png)
 
 ---
 
