--- a/index.mdx
+++ b/index.mdx
@@ -75,7 +75,7 @@ export { future as theme } from "mdx-deck/themes";
 
 ## Syled Component
 
-[Repo](https://www.styled-components.com/)
+[Documentation](https://www.styled-components.com/)
 
 ---
 
@@ -129,6 +129,19 @@ const getLast = f => f((a, b) => b);
 console.log(`First: ${getFirst(pairCon(3, 2))}`);
 console.log(`Last: ${getLast(pairCon(3, 6))}`);
 ```
+
+---
+
+## Video
+
+<iframe
+    width="840"
+    height="473"
+    src="https://www.youtube.com/embed/Onmg_a6bxFE"
+    frameBorder="0"
+    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+    allowFullScreen
+/>
 
 ---
 
